# flight-deck

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md
.github/: pull_request_template.md
docs/: CLIENTS.md  DESIGN.md  PLANS.md  (+5 more)
kb-server/: .env.example  AGENTS.md  BRANCHING_AND_CURRENT_VIEW.md  README.md  alembic.ini  pyproject.toml
kb-server/alembic/: env.py
kb-server/alembic/versions/: 001_initial_tables.py  002_api_keys.py
kb-server/app/: main.py  streamlit_admin.py
kb-server/app/api/: deps.py
kb-server/app/api/routes/: admin.py  context.py  health.py  notes.py  publish.py
kb-server/app/cli/: keys.py
kb-server/app/core/: auth.py  config.py  identity.py  logging.py
kb-server/app/models/: api_key.py  db.py
kb-server/app/schemas/: context.py  notes.py
kb-server/app/services/: admin_service.py  current_view_service.py  git_batcher.py  git_service.py  github_service.py  publish_service.py  retrieval_service.py  revup_batcher.py  vault_service.py
kb-server/app/workers/: autosave.py
kb-server/kb_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kb-server/scripts/: kb-api.service  kb-worker.service  setup_linux.sh  start_api.sh  start_worker.sh
kb-server/tests/: conftest.py  test_admin.py  test_auth.py  test_autosave.py  test_config.py  test_context_api.py  test_current_view.py  test_git_batcher.py  test_git_service.py  test_github_service.py  test_notes_api.py  test_revup_batcher.py  test_source_and_delete.py  test_vault_service.py
mcp-server/: README.md  pyproject.toml
mcp-server/flight_deck_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp-server/mcp_server/: __init__.py  client.py  config.py  server.py
mcp-server/tests/: test_client.py  test_server.py
vault-sync/: README.md  pyproject.toml
vault-sync/tests/: test_api_client.py  test_sync.py  test_watcher.py
vault-sync/vault_sync/: api_client.py  cli.py  config.py  sync.py  watcher.py
(+68 files in other folders)
