[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-sync"
version = "0.1.0"
description = "Daemon that syncs a local directory with the kb-server current view"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "watchdog>=4.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
vault-sync = "vault_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
